--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,11 +20,10 @@ project(serac LANGUAGES CXX C)
 set(ENABLE_MPI ON CACHE BOOL "")
 
 if (NOT MPI_C_COMPILER OR NOT MPI_CXX_COMPILER)
-message(FATAL_ERROR 
-"Serac requires MPI.  It is required to provide the MPI C/C++ "
-"compiler wrappers via the CMake variables, "
-"MPI_C_COMPILER and MPI_CXX_COMPILER."
-)
+    message(FATAL_ERROR 
+            "Serac requires MPI.  It is required to provide the MPI C/C++ "
+            "compiler wrappers via the CMake variables, "
+            "MPI_C_COMPILER and MPI_CXX_COMPILER.")
 endif()
 
 # Save off "raw" flags before they are modified by serac/BLT
