build: test out using a single pch

--- a/src/serac/CMakeLists.txt
+++ b/src/serac/CMakeLists.txt
@@ -4,6 +4,13 @@
 #
 # SPDX-License-Identifier: (BSD-3-Clause)
 
+blt_add_library(
+    NAME        serac_precompiled_headers
+    SOURCES     precompiled_headers.cpp
+    DEPENDS_ON  mfem axom
+    )
+target_precompile_headers(serac_precompiled_headers PRIVATE precompiled_headers.hpp)
+
 add_subdirectory(infrastructure)
 add_subdirectory(numerics)
 add_subdirectory(physics)
