--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = https://github.com/LLNL/axom.git
 [submodule "mfem"]
 	path = mfem
-	url = https://github.com/mfem/mfem.git
+	url = https://github.com/white238/mfem.git
