--- a/src/serac/physics/tests/CMakeLists.txt
+++ b/src/serac/physics/tests/CMakeLists.txt
@@ -22,6 +22,7 @@ set(solver_tests
     serac_thermal_structural_solver.cpp
     serac_thermal_solid_solver.cpp
     serac_thermal_expansion.cpp
+    serac_thermal_functional.cpp
     )
 
 serac_add_tests( SOURCES ${solver_tests}
