--- a/src/serac/infrastructure/CMakeLists.txt
+++ b/src/serac/infrastructure/CMakeLists.txt
@@ -41,9 +41,9 @@ blt_add_library(
     DEPENDS_ON  ${infrastructure_depends}
     )
 
-if (NOT AXOM_DIR)
+if (SERAC_ENABLE_CODEVELOP)
     # This really shouldn't be needed but it keeps getting dropped from axom.
-    # It certainly shouln't go here either.
+    # It certainly shouldn't go here either.
     target_include_directories(serac_infrastructure SYSTEM PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../../axom/src>
         )
