--- a/examples/using-with-cmake/CMakeLists.txt
+++ b/examples/using-with-cmake/CMakeLists.txt
@@ -5,6 +5,13 @@ project(serac_example LANGUAGES C CXX)
 include(CMakeFindDependencyMacro)
 find_dependency(serac REQUIRED NO_DEFAULT_PATH PATHS "${SERAC_DIR}/lib/cmake")
 
+# BEGIN FIXME: This is needed to compensate for Conduit using CMake's MPI targets
+#  on CMake 3.15+. This may get solved in a cleaner way down the road in BLT
+if( ${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.15.0" )
+    find_package(MPI REQUIRED)
+endif()
+# END FIXME
+
 # BEGIN FIXME: Remove this after Umpire releases
 # Create fake empty target, this stops CMake from adding -lcuda_runtime to the link line
 add_library(cuda_runtime INTERFACE)
