doc: Add begin fixme to patch

--- a/examples/using-with-cmake/CMakeLists.txt
+++ b/examples/using-with-cmake/CMakeLists.txt
@@ -18,7 +18,7 @@ endif()
 add_library(cuda_runtime INTERFACE)
 # END FIXME
 
-# Create fake empty target, this stops CMake from adding -lmpi to the link line
+# BEGIN FIXME: Create fake empty target, this stops CMake from adding -lmpi to the link line
 add_library(mpi INTERFACE)
 # END FIXME
 
