--- a/scripts/spack/devtools_configs/toss_3_x86_64_ib/packages.yaml
+++ b/scripts/spack/devtools_configs/toss_3_x86_64_ib/packages.yaml
@@ -1,18 +1,3 @@
-# -------------------------------------------------------------------------
-# This file controls default concretization preferences for Spack.
-#
-# Settings here are versioned with Spack and are intended to provide
-# sensible defaults out of the box. Spack maintainers should edit this
-# file to keep it current.
-#
-# Users can override these settings by editing the following files.
-#
-# Per-spack-instance settings (overrides defaults):
-#   $SPACK_ROOT/etc/spack/packages.yaml
-#
-# Per-user settings (overrides default and site settings):
-#   ~/.spack/packages.yaml
-# -------------------------------------------------------------------------
 packages:
   all:
     # This defaults us to machine specific flags of ivybridge which allows
@@ -23,6 +8,20 @@ packages:
       blas: [netlib-lapack]
       lapack: [netlib-lapack]
       mpi: [mvapich2]
+      gl: [opengl]
+      glu: [openglu]
+  opengl:
+    buildable: false
+    externals:
+    - spec: opengl@1.7.0
+      prefix: /usr
+  openglu:
+    buildable: false
+    externals:
+    - spec: openglu@1.3.1
+      prefix: /usr
+
+  # Lock down which MPI we are using
   mpi:
     buildable: false
 
@@ -34,96 +33,96 @@ packages:
     - spec: netlib-lapack@3.6.1
       prefix: /usr
 
-# System level packages to not build
+  # System level packages to not build
   autoconf:
     buildable: false
     externals:
-    - spec: autoconf
+    - spec: autoconf@2.69
       prefix: /usr
   automake:
     buildable: false
     externals:
-    - spec: automake
+    - spec: automake@1.13.4
       prefix: /usr
   binutils:
     buildable: false
     externals:
-    - spec: binutils
+    - spec: binutils@2.27
       prefix: /usr
   bzip2:
     buildable: false
     externals:
-    - spec: bzip2
+    - spec: bzip2@1.0.6
       prefix: /usr
   diffutils:
     buildable: false
     externals:
-    - spec: diffutils
+    - spec: diffutils@3.3
       prefix: /usr
   epoxy:
     buildable: false
     externals:
-    - spec: epoxy
+    - spec: epoxy@1.5.2
       prefix: /usr
   findutils:
     buildable: false
     externals:
-    - spec: findutils
+    - spec: findutils@4.5.11
       prefix: /usr
   gettext:
     buildable: false
     externals:
-    - spec: gettext
+    - spec: gettext@0.19.8.1
       prefix: /usr
   ghostscript:
     buildable: false
     externals:
-    - spec: ghostscript
+    - spec: ghostscript@9.25
       prefix: /usr
   groff:
     buildable: false
     externals:
-    - spec: groff
+    - spec: groff@1.22.2
       prefix: /usr
   graphviz:
     buildable: false
     externals:
-    - spec: graphviz
+    - spec: graphviz@2.30.1
       prefix: /usr
   libtool:
     buildable: false
     externals:
-    - spec: libtool
+    - spec: libtool@2.4.2
       prefix: /usr
   libx11:
     buildable: false
     externals:
-    - spec: libx11
+    - spec: libx11@1.20.4
       prefix: /usr
   m4:
     buildable: false
     externals:
-    - spec: m4
+    - spec: m4@1.4.16
       prefix: /usr
   perl:
     buildable: false
     externals:
-    - spec: perl
+    - spec: perl@5.16.3
       prefix: /usr
   pkg-config:
     buildable: false
     externals:
-    - spec: pkg-config
+    - spec: pkg-config@0.27.1
       prefix: /usr
   readline:
     buildable: false
     externals:
-    - spec: readline
+    - spec: readline@6.2
       prefix: /usr
   tar:
     buildable: false
     externals:
-    - spec: tar
+    - spec: tar@1.26
       prefix: /usr
   unzip:
     buildable: false
@@ -133,7 +132,7 @@ packages:
   zlib:
     buildable: false
     externals:
-    - spec: zlib
+    - spec: zlib@1.2.7
       prefix: /usr
 
   # Packages we may want to build in the future with specific versions
@@ -141,22 +140,12 @@ packages:
     version: [3.14.5]
     buildable: false
     externals:
-    - spec: cmake
+    - spec: cmake@3.14.5
       prefix: /usr/tce/packages/cmake/cmake-3.14.5
   llvm:
     version: [10.0.0]
     buildable: false
     externals:
-    - spec: llvm+clang
+    - spec: llvm@10.0.0+clang
       prefix: /usr/tce/packages/clang/clang-10.0.0
-  python:
-    buildable: false
-    externals:
-    - spec: python@3.8.2
-      prefix: /usr/tce/packages/python/python-3.8.2
-  py-sphinx:
-    version: [2.2.0]
-    buildable: false
-    externals:
-    - spec: py-sphinx@2.2.0
-      prefix: /usr/tce/packages/python/python-3.8.2/
+
