move over basic ats file from previous PR

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -4,6 +4,14 @@
 #
 # SPDX-License-Identifier: (BSD-3-Clause) 
 
+if (ATS_DIR)
+    add_subdirectory(integration)
+endif()
+
+#------------------------------------------------------------------------------
+# Smoke Tests
+#------------------------------------------------------------------------------
+
 #
 # Language tests
 #
