--- a/src/tests/integration/ats.sh.in
+++ b/src/tests/integration/ats.sh.in
@@ -1,4 +1,11 @@
 #!/bin/bash
+##############################################################################
+# Copyright (c) 2019-2021, Lawrence Livermore National Security, LLC and
+# other Serac Project Developers. See the top-level LICENSE file for
+# details.
+#
+# SPDX-License-Identifier: (BSD-3-Clause)
+##############################################################################
 
 ########################
 ## Test Invocations
@@ -11,19 +18,20 @@
 export ATS_SERAC_BIN_DIR=@SERAC_BIN_DIR@/bin
 export ATS_SERAC_REPO_DIR=@SERAC_REPO_DIR@
 
-export PATH=@ATS_DIR@/bin:$ATS_SERAC_BIN_DIR:$PATH
-
-#Note: This is needed on my installed version because something is wrong with ATS's install
-#export MACHINE_TYPE=slurm36
+export ATS_BIN_DIR=@ATS_DIR@/bin
+export PATH=$ATS_BIN_DIR:$ATS_SERAC_BIN_DIR:$PATH
 
 echo "~~~~~~~~~~~~~~~~~~~~~~~~~~"
 echo "ATS:      " `which ats`
 echo "BIN DIR:  " $ATS_SERAC_BIN_DIR
-echo "REPO DIR: " @SERAC_REPO_DIR@
+echo "REPO DIR: " $ATS_SERAC_REPO_DIR
 echo "~~~~~~~~~~~~~~~~~~~~~~~~~~"
 
 # Clean-up old run's logs
 rm -rf $SYS_TYPE.*
 
+# Clean-up last run's output
+rm -rf $ATS_SERAC_REPO_DIR/tests/integration/*/output
+
 # Run ATS
-ats @SERAC_REPO_DIR@/tests/integration/test.ats
+ats $ATS_SERAC_REPO_DIR/tests/integration/test.ats
