--- a/src/serac/infrastructure/CMakeLists.txt
+++ b/src/serac/infrastructure/CMakeLists.txt
@@ -31,7 +31,7 @@ set(infrastructure_sources
     terminator.cpp
     )
 
-set(infrastructure_depends axom fmt ascent::ascent_mpi mpi cli11 mfem)
+set(infrastructure_depends axom fmt mpi cli11 mfem)
 blt_list_append( TO infrastructure_depends ELEMENTS caliper IF ${SERAC_USE_CALIPER} )
 
 blt_add_library(
