ci: Adding build type to echo line in azure CI

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,7 @@ jobs:
     clean: true
     submodules: recursive
   - script:  |
-      echo " -e $TEST_TARGET -e HOST_CONFIG $(Compiler_ImageName) ./scripts/llnl/build_src.py -v --host-config $HOST_CONFIG"
+      echo " -e $TEST_TARGET -e HOST_CONFIG $(Compiler_ImageName) ./scripts/llnl/build_src.py -v --host-config $HOST_CONFIG" --extra-cmake-options CMAKE_BUILD_TYPE=$BUILD_TYPE"
       docker run --rm -v `pwd`:/home/serac/serac -e TEST_TARGET -e HOST_CONFIG $(Compiler_ImageName) ./serac/scripts/llnl/build_src.py -v --host-config $HOST_CONFIG --extra-cmake-options CMAKE_BUILD_TYPE=$BUILD_TYPE
 
     displayName: '$(TEST_TARGET) Build & Test'
