--- a/cmake/serac-config.cmake.in
+++ b/cmake/serac-config.cmake.in
@@ -34,6 +34,7 @@ if(NOT SERAC_FOUND)
   set(SERAC_USE_MFEM           "@SERAC_USE_MFEM@")
   set(SERAC_USE_MPI            "@SERAC_USE_MPI@")
   set(SERAC_USE_TRIBOL         "@SERAC_USE_TRIBOL@")
+  set(SERAC_USE_ADIAK          "@SERAC_USE_ADIAK@")
   set(SERAC_USE_CALIPER        "@SERAC_USE_CALIPER@")
   set(SERAC_USE_PETSC          "@SERAC_USE_PETSC@")
   set(SERAC_USE_UMPIRE         "@SERAC_USE_UMPIRE@")
@@ -111,6 +112,17 @@ if(NOT SERAC_FOUND)
       set(TRIBOL_DIR ${SERAC_TRIBOL_DIR}) 
     endif()
     find_dependency(tribol REQUIRED NO_DEFAULT_PATH PATHS "${TRIBOL_DIR}/lib/cmake")
+  endif()
+
+  # Adiak
+  if(SERAC_USE_ADIAK)
+    set(SERAC_ADIAK_DIR "@ADIAK_DIR@")
+
+    if(NOT ADIAK_DIR) 
+      set(ADIAK_DIR ${SERAC_ADIAK_DIR}) 
+    endif()
+
+    find_dependency(adiak REQUIRED NO_DEFAULT_PATH PATHS "${ADIAK_DIR}")
   endif()
 
   # Caliper
