tpl: Moving the serac spack build to the proper spack fork for ats fixes and removing m4 from the ubuntu 20 build

--- a/.uberenv_config.json
+++ b/.uberenv_config.json
@@ -4,8 +4,8 @@
 "package_final_phase" : "initconfig",
 "package_source_dir" : "../..",
 "force_commandline_prefix" : false,
-"spack_url": "https://github.com/spack/spack",
-"spack_commit": "d19105f76165857ca5f25ddb7e63a45a31b2ee92",
+"spack_url": "https://github.com/adamjstewart/spack.git",
+"spack_commit": "cc97d5c1a00f68b96c766fcfb633145cb14277e0",
 "spack_configs_path": "scripts/spack/configs",
 "spack_packages_path": "scripts/spack/packages",
 "spack_activate" : {},
