fix missing include directory for axom_smoketest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,6 +164,14 @@ install(TARGETS              serac
 if (SERAC_ENABLE_CODEVELOP)
     # Add Axom's targets to our export set
     # TODO: we should ask Axom for this list in the future
+
+
+    # This really shouldn't be needed but it keeps getting dropped from axom.
+    # It certainly shouldn't go here either.
+    target_include_directories(axom SYSTEM PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/axom/src>
+    )
+
     set(axom_exported_targets axom cli11 fmt hdf5 lua sol sparsehash)
     install(TARGETS              ${axom_exported_targets}
             EXPORT               serac-targets
