--- a/src/serac/physics/materials/CMakeLists.txt
+++ b/src/serac/physics/materials/CMakeLists.txt
@@ -15,6 +15,7 @@ set(materials_headers
     thermal_expansion_material.hpp
     solid_utils.hpp
     thermal_functional_material.hpp
+    solid_functional_material.hpp
     )
 
 set(materials_depends
