--- a/src/serac/physics/tests/CMakeLists.txt
+++ b/src/serac/physics/tests/CMakeLists.txt
@@ -26,6 +26,7 @@ set(solver_tests
     serac_solid.cpp
     serac_solid_reuse_mesh.cpp
     serac_solid_adjoint.cpp
+    serac_solid_functional.cpp
     serac_thermal_solver.cpp
     serac_thermal_structural_solver.cpp
     serac_thermal_solid_solver.cpp
