--- a/.gitlab/build_quartz.yml
+++ b/.gitlab/build_quartz.yml
@@ -11,55 +11,44 @@
       when: always
     - when: on_success
 
-####
-# In pre-build phase, allocate a node for builds
-quartz_allocate:
-  variables:
-    GIT_STRATEGY: none
-  extends: [.on_quartz, .src_workflow]
-  stage: allocate
-  script:
-    - salloc -p pdebug -A ${ALLOC_BANK} -N 1 -c 36 -t 30 --no-shell --job-name=${PROJECT_ALLOC_NAME}
-  needs: []
 
 ####
-# In post-build phase, deallocate resources
-# Note : make sure this is run even on build phase failure
-quartz_release:
-  variables:
-    GIT_STRATEGY: none
-  extends: [.on_quartz, .src_workflow]
-  stage: release
-  script:
-    - export JOBID=$(squeue -h --name=${PROJECT_ALLOC_NAME} --format=%A)
-    - if [[ -n "${JOBID}" ]]; then scancel ${JOBID}; fi
-
-####
-# Template
+# Templates
 .src_build_on_quartz:
   stage: build
   variables:
-    ALLOC_COMMAND: "srun -p pdebug -A ${ALLOC_BANK} -t 15 -N 1 --interactive ${ASSIGN_ID}"
+    ALLOC_COMMAND: "srun -t 20 -p pdebug -A ${ALLOC_BANK} -N 1 --exclusive --interactive --mpibind=off"
   extends: [.src_build_script, .on_quartz, .src_workflow]
-  needs: [quartz_allocate]
+  needs: []
+
+.integration_tests_on_quartz:
+  stage: test
+  variables:
+    BUILD_DIRECTORY: "_serac_build_and_test_*/build-*"
+    ALLOC_COMMAND: "salloc -p pdebug -A ${ALLOC_BANK} -N 2 -t 20"
+  extends: [.integration_tests_script, .on_quartz, .src_workflow]
+  needs: [src_build_on_quartz]
 
 .full_build_on_quartz:
   stage: build
   variables:
-    ALLOC_COMMAND: "srun -p pdebug -A ${ALLOC_BANK} -t 45 -N 1 --interactive"
+    ALLOC_COMMAND: "salloc -p pdebug -A ${ALLOC_BANK} -N 1 -c 36 -t 45"
   extends: [.full_build_script, .on_quartz, .full_workflow]
   needs: []
   before_script:
     # LC version of pip is ancient
     - if [[ $(python3 -c 'import pip; print(pip.__version__ < "19.3")') == "True" ]]; then python3 -m pip install --user --upgrade pip; fi
 
+
 ####
 # Build jobs
+
+# Only run integration tests on one spec
 quartz-clang_10_0_0-src:
   variables:
     COMPILER: "clang@10.0.0"
     HOST_CONFIG: "quartz-toss_3_x86_64_ib-${COMPILER}.cmake"
-  extends: .src_build_on_quartz
+  extends: .integration_tests_on_quartz
 
 quartz-gcc_8_3_1-src:
   variables:
