--- a/.gitlab/build_quartz.yml
+++ b/.gitlab/build_quartz.yml
@@ -27,7 +27,7 @@
     BUILD_DIRECTORY: "_serac_build_and_test_*/build-*"
     ALLOC_COMMAND: "salloc -p pdebug -A ${ALLOC_BANK} -N 2 -t 20"
   extends: [.integration_tests_script, .on_quartz, .src_workflow]
-  needs: [src_build_on_quartz]
+  needs: [.src_build_on_quartz]
 
 .full_build_on_quartz:
   stage: build
