--- a/.gitlab/build_quartz.yml
+++ b/.gitlab/build_quartz.yml
@@ -12,22 +12,12 @@
 ####
 # Templates
 .src_build_on_quartz:
-  stage: build
   variables:
-    ALLOC_COMMAND: "srun -t 20 -p pdebug -A ${ALLOC_BANK} -N 1 --exclusive --interactive --mpibind=off"
+    ALLOC_COMMAND: "srun -p pdebug -A ${ALLOC_BANK} -N ${ALLOC_NODES} -t ${ALLOC_TIME} --exclusive --interactive --mpibind=off"
   extends: [.src_build_script, .on_quartz, .src_workflow]
   needs: []
 
-.integration_tests_on_quartz:
-  stage: test
-  variables:
-    BUILD_DIRECTORY: "_serac_build_and_test_*/build-*"
-    ALLOC_COMMAND: "salloc -p pdebug -A ${ALLOC_BANK} -N 2 -t 20"
-  extends: [.integration_tests_script, .on_quartz, .src_workflow]
-  needs: []
-
 .full_build_on_quartz:
-  stage: build
   variables:
     ALLOC_COMMAND: "salloc -p pdebug -A ${ALLOC_BANK} -N 1 -c 36 -t 45"
   extends: [.full_build_script, .on_quartz, .full_workflow]
@@ -40,20 +30,22 @@
 ####
 # Build jobs
 
+# Only run integration tests on one spec
 quartz-clang_10_0_0-src:
   variables:
     COMPILER: "clang@10.0.0"
     HOST_CONFIG: "quartz-toss_3_x86_64_ib-${COMPILER}.cmake"
-  extends: .src_build_on_quartz
-
-# Only run integration tests on one spec
-quartz-clang_10_0_0-integration:
-  extends: .integration_tests_on_quartz
+    DO_INTEGRATION_TESTS: "yes"
+    ALLOC_NODES: "2"
+    ALLOC_TIME: "30"
+  extends: [.src_build_on_quartz, .integration_tests_on_quartz]
 
 quartz-gcc_8_3_1-src:
   variables:
     COMPILER: "gcc@8.3.1"
     HOST_CONFIG: "quartz-toss_3_x86_64_ib-${COMPILER}.cmake"
+    ALLOC_NODES: "1"
+    ALLOC_TIME: "20"
   extends: .src_build_on_quartz
 
 quartz-clang_10_0_0-full:
