--- a/.gitlab/build_quartz.yml
+++ b/.gitlab/build_quartz.yml
@@ -1,6 +1,9 @@
 ####
 # This is the shared configuration of jobs for quartz
 .on_quartz:
+  variables:
+    ALLOC_OPTIONS: "-p pdebug --exclusive --mpibind=off"
+    ALLOC_COMMAND: "salloc ${ALLOC_OPTIONS} -A ${ALLOC_BANK} -N ${ALLOC_NODES} -t ${ALLOC_TIME}"
   tags:
     - shell
     - quartz
@@ -12,14 +15,10 @@
 ####
 # Templates
 .src_build_on_quartz:
-  variables:
-    ALLOC_COMMAND: "srun -p pdebug -A ${ALLOC_BANK} -N ${ALLOC_NODES} -t ${ALLOC_TIME} --exclusive --interactive --mpibind=off"
   extends: [.src_build_script, .on_quartz, .src_workflow]
   needs: []
 
 .full_build_on_quartz:
-  variables:
-    ALLOC_COMMAND: "salloc -p pdebug -A ${ALLOC_BANK} -N 1 -c 36 -t 45"
   extends: [.full_build_script, .on_quartz, .full_workflow]
   needs: []
   before_script:
@@ -52,10 +51,14 @@ quartz-clang_10_0_0-full:
   variables:
     COMPILER: "clang@10.0.0"
     SPEC: "--spec=%${COMPILER}"
+    ALLOC_NODES: "1"
+    ALLOC_TIME: "45"
   extends: .full_build_on_quartz
 
 quartz-gcc_8_3_1-full:
   variables:
     COMPILER: "gcc@8.3.1"
     SPEC: "--spec=%${COMPILER}"
+    ALLOC_NODES: "1"
+    ALLOC_TIME: "45"
   extends: .full_build_on_quartz
