add codevelop azure job

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,6 +37,13 @@ jobs:
           TEST_TARGET: 'linux_clang10'
           HOST_CONFIG: 'docker-linux-ubuntu20.04-ivybridge-clang@10.0.0.cmake'
           BUILD_TYPE: 'Release'
+      linux_clang10_codevelop:
+          VM_ImageName: 'ubuntu-20.04'
+          Compiler_ImageName: $(Clang_10_ImageName)
+          TEST_TARGET: 'linux_clang10'
+          HOST_CONFIG: 'docker-linux-ubuntu20.04-ivybridge-clang@10.0.0.cmake'
+          BUILD_TYPE: 'Debug'
+          CMAKE_OPTS: '-DENABLE_CODEVELOP=ON'
 
   pool:
     vmImage: $(VM_ImageName)
@@ -46,8 +53,8 @@ jobs:
     clean: true
     submodules: recursive
   - script:  |
-      echo " -e $TEST_TARGET -e HOST_CONFIG $(Compiler_ImageName) ./scripts/llnl/build_src.py -v --host-config $HOST_CONFIG --extra-cmake-options -DCMAKE_BUILD_TYPE=$BUILD_TYPE"
-      docker run --rm -v `pwd`:/home/serac/serac -e TEST_TARGET -e HOST_CONFIG $(Compiler_ImageName) ./serac/scripts/llnl/build_src.py -v --host-config $HOST_CONFIG --extra-cmake-options -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+      echo " -e $TEST_TARGET -e HOST_CONFIG $(Compiler_ImageName) ./scripts/llnl/build_src.py -v --host-config $HOST_CONFIG \"${CMAKE_OPTS} -DCMAKE_BUILD_TYPE=$BUILD_TYPE\""
+      docker run --rm -v `pwd`:/home/serac/serac -e TEST_TARGET -e HOST_CONFIG $(Compiler_ImageName) ./serac/scripts/llnl/build_src.py -v --host-config $HOST_CONFIG --extra-cmake-options "${CMAKE_OPTS} -DCMAKE_BUILD_TYPE=$BUILD_TYPE"
 
     displayName: '$(TEST_TARGET) Build & Test'
   - task: PublishTestResults@2
