--- a/cmake/serac-config.cmake.in
+++ b/cmake/serac-config.cmake.in
@@ -26,22 +26,24 @@ if(NOT SERAC_FOUND)
   # Set user configuration options and features
   #----------------------------------------------------------------------------
 
+  set(SERAC_ENABLE_CODEVELOP  @SERAC_ENABLE_CODEVELOP@)
+
   # SERAC external TPLs
-  set(SERAC_USE_AXOM           "@SERAC_USE_AXOM@")
-  set(SERAC_USE_CONDUIT        "@SERAC_USE_CONDUIT@")
-  set(SERAC_USE_FMT            "@SERAC_USE_FMT@")
-  set(SERAC_USE_HDF5           "@SERAC_USE_HDF5@")
-  set(SERAC_USE_MFEM           "@SERAC_USE_MFEM@")
-  set(SERAC_USE_MPI            "@SERAC_USE_MPI@")
-  set(SERAC_USE_TRIBOL         "@SERAC_USE_TRIBOL@")
-  set(SERAC_USE_CALIPER        "@SERAC_USE_CALIPER@")
-  set(SERAC_USE_PETSC          "@SERAC_USE_PETSC@")
-  set(SERAC_USE_UMPIRE         "@SERAC_USE_UMPIRE@")
-  set(SERAC_USE_RAJA           "@SERAC_USE_RAJA@")
-  set(SERAC_USE_CHAI           "@SERAC_USE_CHAI@")
+  set(SERAC_USE_AXOM           @SERAC_USE_AXOM@)
+  set(SERAC_USE_CONDUIT        @SERAC_USE_CONDUIT@)
+  set(SERAC_USE_FMT            @SERAC_USE_FMT@)
+  set(SERAC_USE_HDF5           @SERAC_USE_HDF5@)
+  set(SERAC_USE_MFEM           @SERAC_USE_MFEM@)
+  set(SERAC_USE_MPI            @SERAC_USE_MPI@)
+  set(SERAC_USE_TRIBOL         @SERAC_USE_TRIBOL@)
+  set(SERAC_USE_CALIPER        @SERAC_USE_CALIPER@)
+  set(SERAC_USE_PETSC          @SERAC_USE_PETSC@)
+  set(SERAC_USE_UMPIRE         @SERAC_USE_UMPIRE@)
+  set(SERAC_USE_RAJA           @SERAC_USE_RAJA@)
+  set(SERAC_USE_CHAI           @SERAC_USE_CHAI@)
 
   # SERAC "builtin" TPLs
-  set(SERAC_ENABLE_CUDA "@ENABLE_CUDA@")
+  set(SERAC_ENABLE_CUDA        @ENABLE_CUDA@)
 
   #----------------------------------------------------------------------------
   # Bring in required dependencies for this Serac configuration
@@ -50,28 +52,22 @@ if(NOT SERAC_FOUND)
 
   # MFEM
   if(SERAC_USE_MFEM)
-    set(SERAC_MFEM_DIR              "@MFEM_DIR@")
-    # MFEM was installed along with serac
-    if(NOT SERAC_MFEM_DIR)
-      set(SERAC_MFEM_DIR ${SERAC_INSTALL_PREFIX})
-    endif()
-    set(SERAC_MFEM_INCLUDE_DIRS     "@MFEM_INCLUDE_DIRS@")
-    set(SERAC_MFEM_LIBRARIES        "@MFEM_LIBRARIES@")
     set(SERAC_MFEM_BUILT_WITH_CMAKE @MFEM_BUILT_WITH_CMAKE@)
-    if(NOT MFEM_INCLUDE_DIRS) 
-      set(MFEM_INCLUDE_DIRS ${SERAC_MFEM_INCLUDE_DIRS}) 
-    endif()
-    if(NOT MFEM_LIBRARIES) 
-      set(MFEM_LIBRARIES ${SERAC_MFEM_LIBRARIES}) 
-    endif()
-    # This will import the targets directly if they exist
-    # Needed for dynamic MFEM library
-    # TODO: Construct CMake target from GNU Make-build MFEM
-    if(SERAC_MFEM_BUILT_WITH_CMAKE AND NOT MFEM_DIR)
-      set(MFEM_DIR ${SERAC_MFEM_DIR}) 
+    if(SERAC_MFEM_BUILT_WITH_CMAKE)
+      if(SERAC_ENABLE_CODEVELOP)
+        # MFEM was installed along with Serac
+        set(MFEM_DIR "${SERAC_INSTALL_PREFIX}")
+      endif()
+
       find_dependency(mfem REQUIRED NO_DEFAULT_PATH PATHS "${MFEM_DIR}/lib/cmake/mfem" NAMES MFEM)
-      # MFEM include directories are added as the variable but not always added to the target itself?
-      target_include_directories(mfem SYSTEM INTERFACE ${MFEM_INCLUDE_DIRS})
+      # MFEM include directories are added as the variable but not always added to the target itself
+      target_include_directories(mfem SYSTEM INTERFACE "${MFEM_INCLUDE_DIRS}")
+    else()
+      # MFEM was installed separately via Makefile-build
+
+      add_library(mfem INTERFACE IMPORTED GLOBAL)
+      target_include_directories(mfem SYSTEM INTERFACE "@MFEM_INCLUDE_DIRS@")
+      target_link_libraries(mfem INTERFACE "@MFEM_LIBRARIES@")
     endif()
   endif()
 
