--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ set(RAW_CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} CACHE STRING "")
 
 message(STATUS "Serac Codevelop Build: ${SERAC_ENABLE_CODEVELOP}")
 if (SERAC_ENABLE_CODEVELOP)
+  # Clear these variables since we are using the submodules not the installations
   unset(AXOM_DIR)
   unset(MFEM_DIR)
 endif()
