feature: Add skeleton of possible surface mesh repartitioner

--- a/src/serac/mesh/CMakeLists.txt
+++ b/src/serac/mesh/CMakeLists.txt
@@ -11,6 +11,7 @@ endif()
 set(mesh_headers
     mesh_utils.hpp
     mesh_utils_base.hpp
+    surface_mesh_partitioner.hpp
     )
 
 set(mesh_sources
