Add adiak as a dependency wherever caliper is used

--- a/src/serac/infrastructure/tests/CMakeLists.txt
+++ b/src/serac/infrastructure/tests/CMakeLists.txt
@@ -5,7 +5,7 @@
 # SPDX-License-Identifier: (BSD-3-Clause) 
 
 set(test_dependencies gtest serac_physics)
-blt_list_append( TO test_dependencies ELEMENTS caliper IF ${SERAC_USE_CALIPER} )
+blt_list_append( TO test_dependencies ELEMENTS caliper adiak IF ${SERAC_ENABLE_PROFILING} )
 
 set(infrastructure_tests
     serac_error_handling.cpp
