--- a/src/serac/numerics/tests/CMakeLists.txt
+++ b/src/serac/numerics/tests/CMakeLists.txt
@@ -5,7 +5,7 @@
 # SPDX-License-Identifier: (BSD-3-Clause) 
 
 set(test_dependencies gtest serac_numerics serac_boundary_conditions serac_state)
-blt_list_append( TO test_dependencies ELEMENTS caliper IF ${SERAC_USE_CALIPER} )
+blt_list_append( TO test_dependencies ELEMENTS caliper adiak IF ${SERAC_ENABLE_PROFILING} )
 
 set(numerics_serial_tests
     expr_templates.cpp
