--- a/src/serac/physics/integrators/tests/CMakeLists.txt
+++ b/src/serac/physics/integrators/tests/CMakeLists.txt
@@ -5,7 +5,7 @@
 # SPDX-License-Identifier: (BSD-3-Clause) 
 
 set(test_dependencies gtest serac_physics_integrators)
-blt_list_append( TO test_dependencies ELEMENTS caliper IF ${SERAC_USE_CALIPER} )
+blt_list_append( TO test_dependencies ELEMENTS caliper adiak IF ${SERAC_ENABLE_PROFILING} )
 
 set(integrator_tests
     serac_wrapper_tests.cpp)
